website/versioned_docs/version-0.13/api/interfaces/CheckResult.md
# Interface: CheckResult

Defined in: [src/types.ts:163](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L163)

Check execution result

## Properties

### baselineAverage?

> `optional` **baselineAverage**: `number`

Defined in: [src/types.ts:169](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L169)

***

### debug?

> `optional` **debug**: `DebugInfo`

Defined in: [src/types.ts:179](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L179)

***

### debugId?

> `optional` **debugId**: `string`

Defined in: [src/types.ts:178](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L178)

***

### deviation?

> `optional` **deviation**: `number`

Defined in: [src/types.ts:168](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L168)

***

### error?

> `optional` **error**: `string`

Defined in: [src/types.ts:171](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L171)

***

### executedAt

> **executedAt**: `Date`

Defined in: [src/types.ts:174](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L174)

***

### executionDurationMs?

> `optional` **executionDurationMs**: `number`

Defined in: [src/types.ts:173](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L173)

***

### lagMinutes?

> `optional` **lagMinutes**: `number`

Defined in: [src/types.ts:167](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L167)

***

### lastUpdate?

> `optional` **lastUpdate**: `Date`

Defined in: [src/types.ts:166](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L166)

***

### nextCheckAt?

> `optional` **nextCheckAt**: `Date`

Defined in: [src/types.ts:175](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L175)

***

### queryExecuted?

> `optional` **queryExecuted**: `string`

Defined in: [src/types.ts:172](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L172)

***

### rowCount?

> `optional` **rowCount**: `number`

Defined in: [src/types.ts:165](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L165)

***

### schemaChanges?

> `optional` **schemaChanges**: [`SchemaChanges`](SchemaChanges.md)

Defined in: [src/types.ts:170](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L170)

***

### status

> **status**: [`CheckStatus`](../type-aliases/CheckStatus.md)

Defined in: [src/types.ts:164](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L164)
